--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -22,10 +22,249 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/bg_banner"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:scaleType="centerCrop"
                 app:layout_heightPercent="54%w" />
 
+            <ImageView
+                android:id="@+id/iv_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="@dimen/dp_16"
+                android:background="@mipmap/icon_telephone"
+                app:layout_heightPercent="5.6%w"
+                app:layout_marginTopPercent="32%w"
+                app:layout_widthPercent="4.8%w" />
 
+            <com.zhy.android.percent.support.PercentRelativeLayout
+                android:id="@+id/prl_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/shape_white_bg"
+                android:elevation="@dimen/dp_2"
+                app:layout_marginTopPercent="40%w"
+                app:layout_widthPercent="96%w">
+
+                <TextView
+                    android:id="@+id/tv_shop_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp_16"
+                    android:text="中良汽修"
+                    android:textColor="#111111"
+                    android:textSize="@dimen/dp_20"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="@dimen/dp_28"
+                    android:layout_height="@dimen/dp_14"
+                    android:layout_alignBottom="@id/tv_shop_name"
+                    android:layout_marginBottom="@dimen/dp_4"
+                    android:layout_marginStart="@dimen/dp_6"
+                    android:layout_toRightOf="@id/tv_shop_name"
+                    android:background="@mipmap/icon_authentication" />
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/ll_sign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_shop_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/dp_16"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_one"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/shape_orange_bg_post"
+                        android:paddingEnd="@dimen/dp_6"
+                        android:paddingStart="@dimen/dp_6"
+                        android:text="可刷卡"
+                        android:textColor="#FB7C2F"
+                        android:textSize="@dimen/dp_12" />
+
+
+                    <TextView
+                        android:id="@+id/tv_two"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_type"
+                        android:layout_marginStart="@dimen/dp_12"
+                        android:background="@drawable/shape_orange_bg_post"
+                        android:paddingEnd="@dimen/dp_6"
+                        android:paddingStart="@dimen/dp_6"
+                        android:text="WIFI"
+                        android:textColor="#FB7C2F"
+                        android:textSize="@dimen/dp_12" />
+
+                    <TextView
+                        android:id="@+id/tv_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_type"
+                        android:layout_marginStart="@dimen/dp_12"
+                        android:background="@drawable/shape_orange_bg_post"
+                        android:paddingEnd="@dimen/dp_6"
+                        android:paddingStart="@dimen/dp_6"
+                        android:text="微信支付"
+                        android:textColor="#FB7C2F"
+                        android:textSize="@dimen/dp_12" />
+
+                    <TextView
+                        android:id="@+id/tv_four"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_type"
+                        android:layout_marginStart="@dimen/dp_12"
+                        android:background="@drawable/shape_orange_bg_post"
+                        android:paddingEnd="@dimen/dp_6"
+                        android:paddingStart="@dimen/dp_6"
+                        android:text="支付宝"
+                        android:textColor="#FB7C2F"
+                        android:textSize="@dimen/dp_12" />
+
+                    <TextView
+                        android:id="@+id/tv_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_type"
+                        android:layout_marginStart="@dimen/dp_12"
+                        android:background="@drawable/shape_orange_bg_post"
+                        android:paddingEnd="@dimen/dp_6"
+                        android:paddingStart="@dimen/dp_6"
+                        android:text="停车位"
+                        android:textColor="#FB7C2F"
+                        android:textSize="@dimen/dp_12" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_shop_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/ll_sign"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/dp_16"
+                    android:layout_marginTop="@dimen/dp_16"
+                    android:drawablePadding="@dimen/dp_6"
+                    android:drawableStart="@mipmap/icon_address_location"
+                    android:gravity="center_vertical"
+                    android:text="河南省郑州市中牟县九龙镇天天物流南三百米"
+                    android:textColor="#AFAFAF"
+                    android:textSize="@dimen/dp_14" />
+            </com.zhy.android.percent.support.PercentRelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_intro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/prl_info"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@drawable/shape_white_bg"
+                android:elevation="@dimen/dp_2"
+                android:orientation="vertical"
+                app:layout_widthPercent="96%w">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_48"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:drawableStart="@mipmap/icon_shop_spe"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/dp_10"
+                    android:text="商家特色"
+                    android:textColor="@color/text_black_3"
+                    android:textSize="@dimen/dp_16" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0.5"
+                    android:background="#E5E5E5" />
+
+                <TextView
+                    android:id="@+id/tv_spe"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_48"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/dp_40"
+                    android:text="服务周到，价格合理"
+                    android:textColor="@color/text_black_6"
+                    android:textSize="@dimen/dp_14" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0.5"
+                    android:background="#E5E5E5" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_48"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:drawableStart="@mipmap/icon_shop_intro"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/dp_10"
+                    android:text="商家介绍"
+                    android:textColor="@color/text_black_3"
+                    android:textSize="@dimen/dp_16" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0.5"
+                    android:background="#E5E5E5" />
+
+                <TextView
+                    android:id="@+id/tv_intro"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_48"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/dp_40"
+                    android:text="服务周到，价格合理"
+                    android:textColor="@color/text_black_6"
+                    android:textSize="@dimen/dp_14" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_intro"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@drawable/shape_white_bg"
+                android:elevation="@dimen/dp_2"
+                android:orientation="vertical"
+                app:layout_widthPercent="96%w">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_48"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:drawableStart="@mipmap/icon_shop_address"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/dp_10"
+                    android:text="附近热门商家"
+                    android:textColor="@color/text_black_3"
+                    android:textSize="@dimen/dp_14" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0.5"
+                    android:background="#E5E5E5" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rlv_shop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none" />
+
+            </LinearLayout>
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
