--- a/app/src/main/res/layout/item_shop_list.xml
+++ b/app/src/main/res/layout/item_shop_list.xml
@@ -42,13 +42,27 @@
         app:layout_textSizePercent="3.6%w" />
 
     <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_discount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_name"
+        android:layout_marginStart="@dimen/dp_10"
+        android:layout_toRightOf="@id/tv_type"
+        android:singleLine="true"
+        android:text="0米"
+        android:textColor="#828282"
+        app:layout_marginTopPercent="2%w"
+        app:layout_textSizePercent="3.6%w" />
+
+    <TextView
         android:id="@+id/tv_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/iv_pic"
         android:layout_toRightOf="@id/iv_pic"
         android:drawablePadding="@dimen/dp_6"
-        android:drawableStart="@mipmap/btn_dw_emptygry"
+        android:drawableStart="@mipmap/icon_address_location"
         android:singleLine="true"
         android:text="河南省郑州市金水区-某某某路"
         android:textColor="#A8A8A8"
@@ -109,7 +123,7 @@
         android:background="@drawable/shape_orange_bg_post"
         android:paddingEnd="@dimen/dp_6"
         android:paddingStart="@dimen/dp_6"
-        android:text="停车场"
+        android:text="微信支付"
         android:textColor="#FB7C2F"
         app:layout_marginTopPercent="2%w"
         app:layout_textSizePercent="3%w" />
@@ -124,8 +138,9 @@
         android:background="@drawable/shape_orange_bg_post"
         android:paddingEnd="@dimen/dp_6"
         android:paddingStart="@dimen/dp_6"
-        android:text="停车场"
+        android:text="支付宝"
         android:textColor="#FB7C2F"
+        android:visibility="gone"
         app:layout_marginTopPercent="2%w"
         app:layout_textSizePercent="3%w" />
 
