--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -86,4 +86,5 @@
     <color name="mall_goods_buy">#FF3140</color>
     <color name="main_sel">#FE6E4C</color>
     <color name="title_org_sel">#FE6927</color>
+    <color name="tpc_bg">#3D3E41</color>
 </resources>
