--- a/app/src/main/res/drawable-xhdpi/shape_orange_bg_tpc_money.xml
+++ b/app/src/main/res/drawable-xhdpi/shape_orange_bg_tpc_money.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/dp_6" />
-    <solid android:color="@color/orange" />
+
+    <corners android:radius="@dimen/dp_1000" />
+    <solid android:color="@color/title_org_sel" />
 </shape>
